@@ -1,3 +1,14 @@
+2007-06-25 Jens Tkotz <jens@peino.de> 1.6-RC1-svn-b83
+
+ * Fix: value of 0 was not recognized in gInput
+
+ * Change: Sort users in manage users.
+
+ * Change: Use of label in eCard.
+
+ * Change: Defaults for height and width for popups are now 550/600
+		   (was 500/500)
+
 2007-06-23 Jens Tkotz <jens@peino.de> 1.6-RC1-svn-b82
 
  * Change: New Gallery 1 footer image (ripped from G2 and changed *g*)
